BoaUAT/src/objects/web_site_creds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>consumer_key__c</fullName>
        <label>consumer key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>consumer_secret__c</fullName>
        <label>consumer secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>web site creds</label>
</CustomObject>